# quriust

./: Cargo.toml  LICENSE  README.md  a.py
src/: gates.rs  lib.rs  main.rs  quantum_computer.rs  qubit.rs  register.rs  registers.rs  state.rs
src/algorithms/: dense_coding.rs  deutsch.rs  deutsch_jozsa.rs  ds.rs  mod.rs  quantum_teleportation.rs
