[package]
name = "quriust"
author = ["Pietro Zanotta", "<pcs.parmigiano@gmail.com>"]
version = "0.1.5"
edition = "2021"
repository = "https://github.com/ScipioneParmigiano/quriust"
license = "MIT" 
keywords = ["quantum-computing", "quantum-simulation"]
readme = "README.md"
description = "A Rust library to simulate a quantum computer. Only for quriust ones."


[dependencies]
nalgebra = "0.32.3"
num-complex = "0.4.4"
rand = "0.8.5"
